@@ -1,5 +1,8 @@
 package com.soebes.duplicate;
 
+import static java.util.stream.Collectors.groupingBy;
+import static java.util.stream.Collectors.toMap;
+
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -8,34 +11,21 @@ import java.util.Locale;
 import java.util.Map.Entry;
 import java.util.function.Function;
 
-import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.toList;
-import static java.util.stream.Collectors.toMap;
-
 class DuplicateFinder {
 
   private static final Function<Path, ChecksumForFileResult> checksumForFile = CheckSum::forFile;
 
   private static String formatting(Long readBytes) {
-    StringBuilder sb = new StringBuilder();
-    sb.append(" (");
-
-    sb.append(String.format(Locale.GERMANY, "%,d", readBytes));
-    sb.append(" bytes.)");
-    return sb.toString();
+    return " (" + String.format(Locale.GERMANY, "%,d", readBytes) + " bytes.)";
   }
 
   public static void main(String[] args) {
 
     try {
 
-      var fileCollection = Files.list(Paths.get(args[0]))
-          .filter(Files::isRegularFile)
-          .collect(toList());
+      var fileCollection = Files.list(Paths.get(args[0])).filter(Files::isRegularFile).toList();
 
-      var checkSumResults = fileCollection.parallelStream()
-          .map(checksumForFile)
-          .collect(toList());
+      var checkSumResults = fileCollection.parallelStream().map(checksumForFile).toList();
 
       System.out.println("Total of found files:: " + checkSumResults.size());
       checkSumResults.forEach(item -> {
